Fixed the navbar HTML code and the borders of the navbar items
I managed to fix the styling of the navbar however the hover over effect is not there yet. Once hovered it shows the submenu but the colour on the main navbar is not showing
I spent some extra time as I could not find out why the main colour of the element did not change on hover. The code was there but was not working. I found out that after changing my HTML doc it must have changed the targeting in the style sheets. I changed it a bit by targeting a different element and managed to get it work
I fixed an issue that appeared on IE. It does not recognise space-evenly and shows the navbar completely messed up. I changed it to space-around for IE only in order to make it act in the same way as other browsers
I fixed the borders too. I added border to the left and right as first and last child and then added left and right to each element in the navbar. I made some changes to the border style too. Copied the style from the main website to reflect the borders in exactly the same way

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -7,10 +7,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	@media screen and (min-width: $break-l) {
-		width: 986px;
+		width: 978px;
 }
 	@media screen and (min-width: $break-xl) {
-		width: 1200px;
+		width: 1225px;
 }
 }
 
@@ -32,8 +32,7 @@
 	height: 55px;
 	padding-top: 13px;
   @media screen and (-ms-high-contrast: none) {
-		padding: 11px 7px;
-		font-size: 1rem;
+		padding: 14px 7px;
 }
 }
 
