--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -18,28 +18,41 @@
 
 //All buttons in the navbar styling
 .btn-navbar {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
 	background-color: $color-navbar;
-	width: 159px;
+	width: 153px;
 	height: 94px;
 	line-height: 0.3;
+	text-align: center;
 	font-size: 18px;
 	text-transform: uppercase;
+	padding-bottom: 11px;
 	border-bottom: none;
 	border-top: none;
-	border-right: 1px solid rgba(0, 0, 0, 0.25);
-	border-left: 1px solid rgba(255, 255, 255, 0.1);
+	border-right: 1px solid hsla(0,0%,100%,.1);
+	border-left: 1px solid rgba(0,0,0,.25);
+  @media screen and (-ms-high-contrast: none) {
+		justify-content: space-around;
+}
 	@media only screen and (min-width: $break-xl ) {
 		width: 194px;
 }
 }
 
-p {
-	margin-top: -5px;
+.li-main:first-child {
+	border-left: 1px solid rgba(255,255,255,0.1);
 }
 
-//Right border for the last navbar button
-.btn-cyber-security {
-	border-right: 1px solid rgba(255, 255, 255, 0.1);
+.li-main:last-child {
+	border-right: 1px solid rgba(0,0,0,0.25);
+}
+
+
+//Fixes the position of the menu text in the menu button
+p {
+	margin-top: -5px;
 }
 
 //Navbar container
@@ -51,13 +64,7 @@ p {
 }
 
 .li-main {
-	display: inline-table;
-	margin: 0 -5px;
-	
-	
-	
-	
-
+	display: table-cell;
 }
 
 .li-sub {
@@ -87,12 +94,11 @@ p {
 	.dash-2 {
 		display: block;
 }
-}
-
-	li.web-design:hover button {
+	.btn-web-design{
 		background-color: $color-web-design;
-		.fa-code {
-			color: $color-icon;
+}
+	.fa-code {
+		color: $color-icon;
 }
 }
 
@@ -111,10 +117,9 @@ p {
 	.dash-2 {
 		display: block;
 }
+	.btn-it{
+		background-color: $color-it;
 }
-
-li.it:hover button {
-	background-color: $color-it;
 	.fa-tv {
 		color: $color-icon;
 }
@@ -135,10 +140,9 @@ li.it:hover button {
 	.dash-2 {
 		display: block;
 }
+	.btn-telecoms{
+		background-color: $color-telecoms;
 }
-
-li.telecoms:hover button {
-	background-color: $color-telecoms;
 	.fa-phone-alt {
 		color: $color-icon;
 }
@@ -159,10 +163,9 @@ li.telecoms:hover button {
 	.dash-2 {
 		display: block;
 }
+	.btn-software{
+		background-color: $color-software;
 }
-
-li.software:hover button {
-	background-color: $color-software;
 	.fa-th {
 		color: $color-icon;
 }
@@ -183,10 +186,9 @@ li.software:hover button {
 	.dash-2 {
 		display: block;
 }
+	.btn-digital-marketing{
+		background-color: $color-digital-marketing;
 }
-
-li.digital-marketing:hover button {
-	background-color: $color-digital-marketing;
 	.fa-signal {
 		color: $color-icon;
 }
@@ -207,10 +209,9 @@ li.digital-marketing:hover button {
 	.dash-2 {
 		display: block;
 }
-}
-
-li.cyber-security:hover button {
-	background-color: $color-cyber-security;
+	.btn-cyber-security {
+		background-color: $color-cyber-security;
+	}
 	.fa-shield-alt {
 		color: $color-icon;
 }
@@ -258,4 +259,3 @@ li.cyber-security:hover button {
 small {
 	font-size: .6rem;
 }
-
